data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1164.wast
;; 5. **Test Description**:     Develop a loop embedding a `br_table` with a default branch target and multiple labels, executing a backward jump when index exceeds bounds.     - **Constraint**: Checks default branch target resolution when the index is out of bounds.     - **Edge Case**: Ensures that out-of-bound index branches correctly default to specified targets.

(assert_invalid
  (module
    (func $loop-with-br_table
      (block
        (loop (result i32)
          (i32.const 1)
          (br_table 1 0 2 (i32.const 10)) ; This should test the branch table with an out-of-bounds index
        )
      )
    )
  )
  "type mismatch"
)